--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -8,7 +8,7 @@
 \newcommand{\Дисциплина}{<<Проектирование и архитектура программных систем>>} % для курсовой
 \newcommand{\КодСпециальности}{09.03.04} % Курсовая
 \newcommand{\Специальность}{Программная инженерия} % Курсовая
-\newcommand{\Тема}{Разработка web-сайта «Портфолио фотографа»} % ВКР Курсовая
+\newcommand{\Тема}{<<Веб-приложение для блога»} % ВКР Курсовая
 \newcommand{\ГдеПроводитсяПрактика}{Юго-Западном государственном университете} % для практики
 \newcommand{\РуководительПрактПредпр}{Куркина А. В.} % для практики
 \newcommand{\ДолжнРуководительПрактПредпр}{директор} % для практики
