--- a/LaTeX/Анализ.tex
+++ b/LaTeX/Анализ.tex
@@ -1,13 +1,13 @@
 \section{Анализ предметной области}
-\subsection{Характеристика сайта портфолио и его цели, задачи.}
+\subsection{Характеристика сайта блога и его цели, задачи.}
 
 В мире фотографии происходят удивительные изменения, подобно тому, как в свое время технология трехмерной печати изменила производственные процессы. Как и в случае с пионерами в области 3D-печати, мы стремимся создать нечто уникальное, что подчеркнет не только профессионализм, но и творческий подход к миру фотографии.
 
-В данном введении мы ставим перед собой задачу представить вам веб-портфолио, которое будет не просто коллекцией фотографий, а настоящим отражением стиля и индивидуальности фотографа. Мы приглашаем вас на увлекательное путешествие по миру изысканной фотографии, где каждое изображение рассказывает свою уникальную историю.
+В данном введении мы ставим перед собой задачу представить веб-приложение для блога, которое будет не просто коллекцией фотографий, а настоящим отражением стиля и индивидуальности фотографа. Мы приглашаем вас на увлекательное путешествие по миру изысканной фотографии, где каждое изображение рассказывает свою уникальную историю.
 
-Мы сосредотачиваемся не только на технических аспектах фотографии, но и на том, как каждый кадр может передать эмоции, заставить задуматься и оставить неизгладимый след в воспоминаниях. Приготовьтесь к увлекательному погружению в мир визуального искусства, представленного нашим веб-портфолио.
+Мы сосредотачиваемся не только на технических аспектах фотографии, но и на том, как каждый кадр может передать эмоции, заставить задуматься и оставить неизгладимый след в воспоминаниях. Приготовьтесь к увлекательному погружению в мир визуального искусства, представленного нашим веб-приложением для блога.
 
-В каждом разделе нашего сайта вы обнаружите не только тщательно подобранные работы, но и немного истории, лежащей в их основе. Мы уверены, что это веб-портфолио станет не просто каталогом фотографий, а настоящим путеводителем по миру наших творческих идей и профессиональных достижений. Добро пожаловать в наше виртуальное пространство, где каждое изображение — это уникальная история, рассказанная объективом фотокамеры.
+В каждом разделе нашего сайта вы обнаружите не только тщательно подобранные работы, но и немного истории, лежащей в их основе. Мы уверены, что это веб-приложение для блога станет не просто каталогом фотографий, а настоящим путеводителем по миру наших творческих идей и профессиональных достижений. Добро пожаловать в наше виртуальное пространство, где каждое изображение — это уникальная история, рассказанная объективом фотокамеры.
 \subsection{Технологии и инструменты для разработки веб-сайта}
 
 HTML — это основной язык разметки веб-страниц. С его помощью создаются структура и содержание веб-сайта. HTML предоставляет различные элементы, такие как заголовки, параграфы, изображения, ссылки и многое другое, для организации информации на странице. Он является основой веб-разработки и используется в сочетании с другими технологиями, такими как CSS и JavaScript.
