--- a/LaTeX/Введение.tex
+++ b/LaTeX/Введение.tex
@@ -1,6 +1,6 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
-Фотография, как искусство, переживает новый виток развития, и виртуозные работы фотографов становятся неотъемлемой частью этой эпохи. В современном цифровом мире, где каждое мгновение можно запечатлеть, веб-сайт портфолио фотографа выступает важным инструментом для демонстрации его творческого потенциала и профессиональных навыков.
+Фотография, как искусство, переживает новый виток развития, и виртуозные работы фотографов становятся неотъемлемой частью этой эпохи. В современном цифровом мире, где каждое мгновение можно запечатлеть, веб-сайт блог-портфолио фотографа выступает важным инструментом для демонстрации его творческого потенциала и профессиональных навыков.
 
 Наш веб-сайт представляет собой виртуальную выставку, где каждое изображение – это не просто фотография, а произведение искусства. Мы стремимся подчеркнуть индивидуальность и талант каждого фотографа через высококачественные фотографии, оригинальный дизайн и легкость навигации.
 
@@ -8,7 +8,7 @@
 
 В процессе разработки веб-сайта мы уделили особое внимание галерее высококачественных изображений, описанию каждой работы, созданию оригинального визуального стиля и использованию современных технологий для обеспечения удобства взаимодействия с нашим контентом.
 
-\emph{Цель настоящей работы} – разработка web-сайта портфолио фотографа для привлечения новой аудитории, увеличения заказов и услуг компании. Для достижения поставленной цели необходимо решить \emph{следующие задачи:}
+\emph{Цель настоящей работы} – разработка web-сайта блога-портфолио фотографа для привлечения новой аудитории, увеличения заказов и услуг компании. Для достижения поставленной цели необходимо решить \emph{следующие задачи:}
 \begin{itemize}
 \item провести анализ предметной области;
 \item разработать концептуальную модель web-сайта;
@@ -19,17 +19,16 @@
 \emph{Структура и объем работы.} Отчет состоит из введения, 4 разделов основной части, заключения, списка использованных источников, 2 приложений. Текст выпускной квалификационной работы равен \formbytotal{page}{страниц}{е}{ам}{ам}.
 
 
-\emph{Во введении} мы ставим перед собой задачу создания веб-портфолио, которое не только подчеркнет уникальный стиль и творческий подход фотографа, но и станет эффективным инструментом для привлечения новых клиентов. Мы расскажем о целях работы, опишем структуру веб-сайта и предоставим краткое содержание каждого из его разделов.
+\emph{Во введении} мы ставим перед собой задачу создания веб-блога, которое не только подчеркнет уникальный стиль и творческий подход фотографа, но и станет эффективным инструментом для привлечения новых клиентов. Мы расскажем о целях работы, опишем структуру веб-сайта и предоставим краткое содержание каждого из его разделов.
 
-\emph{В первом разделе} на этапе анализа предметной области мы предпримем шаг в мир фотографии, изучив стиль, особенности и основные работы нашего фотографа. Это позволит нам лучше понять требования к веб-портфолио.
+\emph{В первом разделе} на этапе анализа предметной области мы предпримем шаг в мир фотографии, изучив стиль, особенности и основные работы нашего фотографа. Это позволит нам лучше понять требования к веб-блогу.
 
 \emph{Во втором разделе} на этапе технического задания мы выявим основные требования к веб-сайту. Здесь мы определим, какие функциональности будут доступны посетителям, как обеспечим удобство навигации, и какие дополнительные элементы дизайна мы внедрим.
 
-\emph{В третьем разделе} на этапе технического проектирования мы представим концептуальные идеи для дизайна веб-портфолио. Здесь мы обсудим, каким образом выделить каждую фотографию, как организовать галерею и каким образом донести творческую индивидуальность фотографа через визуальный стиль.
+\emph{В третьем разделе} на этапе технического проектирования мы представим концептуальные идеи для дизайна веб-блога. Здесь мы обсудим, каким образом выделить каждую фотографию, как организовать галерею и каким образом донести творческую индивидуальность фотографа через визуальный стиль.
 
-\emph{В четвертом разделе} мы представим список ключевых компонентов веб-портфолио и их функциональные возможности. Кроме того, мы расскажем о процессе тестирования, который гарантирует корректную работу веб-сайта и соответствие всем требованиям.
+\emph{В четвертом разделе} мы представим список ключевых компонентов веб-блога и их функциональные возможности. Кроме того, мы расскажем о процессе тестирования, который гарантирует корректную работу веб-сайта и соответствие всем требованиям.
 
 В заключении излагаются основные результаты работы, полученные в ходе разработки.
 
-В приложении А представлен графический материал.
-В приложении Б представлены фрагменты исходного кода. 
+В приложении А представлены фрагменты исходного кода. 
