--- a/LaTeX/Заключение.tex
+++ b/LaTeX/Заключение.tex
@@ -1,17 +1,17 @@
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 
-Преимущества веб-сайта портфолио фотографа заключаются в возможности эффективного представления творческих работ и привлечении потенциальных клиентов. Существенным ограничением может быть конкуренция в индустрии и необходимость постоянного обновления контента для поддержания интереса к портфолио.
+Преимущества веб-приложения для блога фотографа заключаются в возможности эффективного представления творческих работ и привлечении потенциальных клиентов. Существенным ограничением может быть конкуренция в индустрии и необходимость постоянного обновления контента для поддержания интереса к веб-приложению для блога.
 
-Фотограф, наблюдая за развитием информационных технологий, стремится использовать их в своей работе, запуская свой веб-сайт. Это позволяет ему заявить о своем творчестве, предоставить информацию о своих услугах и поделиться своим портфолио с потенциальными заказчиками.
+Фотограф, наблюдая за развитием информационных технологий, стремится использовать их в своей работе, запуская свой веб-сайт. Это позволяет ему заявить о своем творчестве, предоставить информацию о своих услугах и поделиться своим веб-приложением для блога с потенциальными заказчиками.
 
 Основные результаты работы:
 
 \begin{enumerate}
-	\item Проведен анализ требований для веб-сайта портфолио фотографа. Выбрана платформа для разработки.
+	\item Проведен анализ требований для веб-приложения для блога фотографа. Выбрана платформа для разработки.
 	\item Разработана концептуальная модель веб-сайта. Выполнено проектирование структуры и дизайна сайта.
 	\item Осуществлена реализация и тестирование веб-сайта. Проведено модульное и системное тестирование функциональности.
 	\item Готовый проект представлен адаптивным дизайном, обеспечивающим корректное отображение на различных устройствах.
 \end{enumerate}
 
-Все задачи, поставленные в начале разработки веб-сайта портфолио фотографа, были успешно выполнены. Сайт доступен в сети Интернет, предоставляя возможность потенциальным клиентам ознакомиться с творческим портфолио фотографа.
+Все задачи, поставленные в начале разработки веб-приложение для блога фотографа, были успешно выполнены. Сайт доступен в сети Интернет, предоставляя возможность потенциальным клиентам ознакомиться с творческим блогом фотографа.
