--- a/LaTeX/Код.tex
+++ b/LaTeX/Код.tex
@@ -1,15 +1,26 @@
 \appendix{Фрагменты исходного кода программы}
 
-main.tex
-\lstinputlisting[language=Tex, frame=none]{main.tex}
+	\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/admin.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/admin_login.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/base_view.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/config_db.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/connect.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/dump_db.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/get_admin.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/get_images.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/home_view.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/image_view.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/render_template.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/serve_file.py}
+\lstinputlisting[language=Python, frame=none, inputencoding=utf8]{kod/server.py}
 
-ТехПроект.tex
-\lstinputlisting[language=Tex, frame=none]{ТехПроект.tex}
 
 \ifВКР{
-\newpage
-\addcontentsline{toc}{section}{На отдельных листах (CD-RW в прикрепленном конверте)}
-\begin{center}
-\textbf{Место для диска}
-\end{center}
+	\newpage
+	\addcontentsline{toc}{section}{На отдельных листах (CD-RW в прикрепленном конверте)}
+	\begin{center}
+		\textbf{Место для диска}
+	\end{center}
 }\fi
+
+
