--- a/LaTeX/ЛистЗадания.tex
+++ b/LaTeX/ЛистЗадания.tex
@@ -51,18 +51,18 @@
 \renewcommand\labelenumi{\theenumi)}
 
 \begin{enumerate}
-\item проанализировать основные критерии эффективного онлайн-портфолио;
-\item разработка концептуальной модели веб-сайта портфолио;
-\item программную систему управления веб-портфолио;
-\item сконструировать и протестировать  веб-сайт портфолио фотографа;
+\item проанализировать основные критерии эффективного веб-приложения для блога;
+\item разработка концептуальной модели веб-приложения для блога;
+\item программную систему управления веб-приложением для блога;
+\item сконструировать и протестировать  веб-приложение для блога;
 \end{enumerate}
 
 {\parindent0pt
   3.2. Входные данные и требуемые результаты для программы:}
 
 \begin{enumerate}
-\item Входными данными для веб-сайта портфолио фотографа являются: изображения и фотографии в высоком разрешении для создания портфолио, описание работ, включая дополнительные детали, метаданные и контекст, дизайнерские предпочтения и требования к визуальной составляющей веб-сайта.
-\item Выходными данными для программной системы являются: сформированные страницы портфолио с изображениями и описаниями работ, запросы и формы обратной связи для потенциальных клиентов, сведения о выполненных работах, визуальные отчеты о статусе и активности портфолио.
+\item Входными данными для веб-приложения для блога являются: изображения и фотографии в высоком разрешении для создания портфолио, описание работ, включая дополнительные детали, метаданные и контекст, дизайнерские предпочтения и требования к визуальной составляющей веб-сайта.
+\item Выходными данными для программной системы являются: сформированные страницы блога-портфолио с изображениями и описаниями работ, запросы и формы обратной связи для потенциальных клиентов, сведения о выполненных работах, визуальные отчеты о статусе и активности блога-портфолио.
 \end{enumerate}
 
 {\parindent0pt
