--- a/LaTeX/РабочийПроект.tex
+++ b/LaTeX/РабочийПроект.tex
@@ -28,11 +28,11 @@ html. Этот код, используется для отображения с
 
 \subsection{Системное тестирование разработанного web-сайта}
 
-На рисунке \ref{main:image} представлена главная страница сайта портфолио фотографа.
+На рисунке \ref{main:image} представлена главная страница сайта веб-приложения блога.
 \newpage % при необходимости можно переносить рисунок на новую страницу
 \begin{figure}[H] % H - рисунок обязательно здесь, или переносится, оставляя пустоту
 \center{\includegraphics[width=1\linewidth]{main1}}
-\caption{Главная страница сайта портфолио фотографа.}
+\caption{Главная страница сайта веб-приложения блога.}
 \label{main:image}
 \end{figure}
 
