--- a/LaTeX/Реферат.tex
+++ b/LaTeX/Реферат.tex
@@ -1,10 +1,10 @@
 \abstract{РЕФЕРАТ}
 
-Объем работы равен \formbytotal{lastpage}{страниц}{е}{ам}{ам}. Работа содержит \formbytotal{figurecnt}{иллюстраци}{ю}{и}{й}, \formbytotal{tablecnt}{таблиц}{у}{ы}{}, \arabic{bibcount} библиографических источников. Количество приложений – 2. Графический материал представлен в приложении А. Фрагменты исходного кода представлены в приложении Б.
+Объем работы равен \formbytotal{lastpage}{страниц}{е}{ам}{ам}. Работа содержит \formbytotal{figurecnt}{иллюстраци}{ю}{и}{й}, 3 таблицы, \arabic{bibcount} библиографических источников. Количество приложений – 1. Фрагменты исходного кода представлены в приложении А.
 
-Перечень ключевых слов: Портфолио фотографа, веб-сайт, фотографии высокого разрешения, галерея работ, описание работ, дизайн сайта, контактная информация, изображения в высоком качестве, визуальный стиль, оптимизация для мобильных устройств, структура портфолио
+Перечень ключевых слов: Портфолио фотографа, веб-сайт, фотографии высокого разрешения, галерея работ, описание работ, дизайн сайта, контактная информация, изображения в высоком качестве, визуальный стиль, оптимизация для мобильных устройств, структура портфолио, блок, веб-приложение, веб-блог, блог фотографа
 
-Объектом разработки является веб-сайт фотографа, представляющий его портфолио, визуализируя и подчеркивая его творческий подход и профессиональные навыки.
+Объектом разработки является веб-приложение для блога фотографа, представляющий его портфолио, визуализируя и подчеркивая его творческий подход и профессиональные навыки.
 
 Целью выпускной квалификационной работы является привлечение клиентов, увеличение популярности фотографа, информирование о стиле и подходе фотографа к своей работе.
 
@@ -15,7 +15,7 @@
 \selectlanguage{english}
 \abstract{ABSTRACT}
   
-The volume of work is \formbytotal{lastpage}{page}{}{s}{s}. The work contains \formbytotal{figurecnt}{illustration}{}{s}{s}, \formbytotal{tablecnt}{table}{}{s}{s}, \arabic{bibcount} bibliographic sources and \formbytotal{числоПлакатов}{sheet}{}{s}{s} of graphic material. The number of applications is 2. The graphic material is presented in annex A. The layout of the site, including the connection of components, is presented in annex B.
+The volume of work is \formbytotal{lastpage}{page}{}{s}{s}. The work contains \formbytotal{figurecnt}{illustration}{}{s}{s}, 3 tables, \arabic{bibcount} bibliographic sources. The number of applications is 1. The layout of the site, including the connection of components, is presented in annex A.
 
 List of key words: Photographer's portfolio, website, high-resolution photos, gallery of works, work descriptions, website design, contact information, high-quality images, visual style, optimization for mobile devices, portfolio structure.
 
