--- a/LaTeX/ТехЗадание.tex
+++ b/LaTeX/ТехЗадание.tex
@@ -1,12 +1,12 @@
 \section{Техническое задание}
 \subsection{Основание для разработки}
 
-Основанием для разработки является задание на курсовую работу "<Разработка web-сайта \textquotedbl Портфолио фотографа\textquotedbl\".
+Основанием для разработки является задание на курсовую работу "<Разработка web-приложения \textquotedbl для блога\textquotedbl\".
 
 \subsection{Цель и назначение разработки}
 
 Основной задачей выпускной квалификационной работы является 
-разработка сайта-портфолио фотографа.
+разработка сайта-блога для фотографа.
 
 Задачами данной разработки являются:
 \begin{itemize}
