--- a/LaTeX/ТехПроект.tex
+++ b/LaTeX/ТехПроект.tex
@@ -1,13 +1,13 @@
 \section{Технический проект}
 \subsection{Общая характеристика организации решения задачи}
 
-Необходимо спроектировать и разработать сайт портфолио, который должен способствовать продвижению фотографа в социальных сетях и на рынке.
+Необходимо спроектировать и разработать веб-приложение для блога, который должен способствовать продвижению фотографа в социальных сетях и на рынке.
 
-Интернет-сайт портфолио представляет собой набор взаимосвязанных электронных страниц, которые сгруппированы по разделам, содержащие текстовую, графическую информацию (изображения). Каждая страница web-сайта – это текстовый документ, написанный на языке программирования (HTML, CSS, JavaScript, Python).
+Веб-приложение для блога представляет собой набор взаимосвязанных электронных страниц, которые сгруппированы по разделам, содержащие текстовую, графическую информацию (изображения). Каждая страница web-сайта – это текстовый документ, написанный на языке программирования (HTML, CSS, JavaScript, Python).
 
 \subsection{Обоснование выбора технологии проектирования}
 
-В современном мире, где визуальное восприятие играет ключевую роль, создание веб-сайта для портфолио фотографа становится неотъемлемой частью представления своего творчества. Информационное пространство, насыщенное разнообразными программными решениями, предоставляет множество инструментов, способных подчеркнуть уникальность и профессионализм в области фотографии.
+В современном мире, где визуальное восприятие играет ключевую роль, создание веб-сайта для веб-приложения для блога фотографа становится неотъемлемой частью представления своего творчества. Информационное пространство, насыщенное разнообразными программными решениями, предоставляет множество инструментов, способных подчеркнуть уникальность и профессионализм в области фотографии.
 
 \subsubsection{Описание используемых технологий и языков программирования}
 
